# rdk_model_zoo

./: .gitignore  .gitmodules  README.md  README_cn.md  requirement.txt
datasets/PascalVOC/: README.md  README_cn.md
datasets/coco/: README.md  download_full_coco.sh
datasets/dotav1/: README.md
datasets/imagenet/: README.md
demos/Application/BEV/: README.md  jupyter_BSP_BEV.ipynb
demos/Instance_Segmentation/: README.md  README_cn.md
demos/Instance_Segmentation/YOLOv8-Seg/: README.md  README_cn.md  YOLOv8_Seg.py  jupyter_BSP_YOLOv8_Instance_Segmentation.ipynb  jupyter_DEBUG_YOLOv8_Instance_Segmentation.ipynb  jupyter_ModelZoo_YOLOv8_Instance_Segmentation.ipynb  jupyter_YOLOv8_Detect.ipynb
demos/OCR/PaddleOCR/: README.md  README_cn.md  README_jp.md  test_paddle_ocr.ipynb
demos/Pose/YOLO11-Pose/: README.md  README_cn.md  YOLOv11_Pose.py  jupyter_BSP_YOLO11_Pose.ipynb
demos/Seg/YOLOv8-Seg/: README.md  README_cn.md
demos/Semantic_Segmentation/: README.md  README_cn.md
demos/Semantic_Segmentation/UNet-resnet50/: README.md  README_cn.md  infer.py
demos/Solution/RDK_Video_Solutions/: README.md  README_cn.md
demos/Vision/modnet/: main.py
demos/Vision/ultralytics_YOLO/: README.md  README_cn.md
demos/Vision/ultralytics_YOLO/cpp/segment/: CMakeLists.txt  main.cc
demos/basic/00_generate_calibration_data/: README.md  generate_calibration_data.py
demos/classification/: README.md  README_cn.md  test_EdgeNeXt_base.ipynb  test_EdgeNeXt_small.ipynb  test_EdgeNeXt_x_small.ipynb  test_EdgeNeXt_xx_small.ipynb  test_EfficientFormerv2_s0.ipynb  test_EfficientFormerv2_s1.ipynb  test_EfficientFormerv2_s2.ipynb  模型量化部署.md
demos/classification/ConvNeXt/: README.md  README_cn.md  main.py  test_ConvNeXt_atto.ipynb  test_ConvNeXt_femto.ipynb  test_ConvNeXt_nano.ipynb  test_ConvNeXt_pico.ipynb
demos/classification/EdgeNeXt/: README.md  README_cn.md  main.py  test_EdgeNeXt_base.ipynb  test_EdgeNeXt_small.ipynb  test_EdgeNeXt_x_small.ipynb  test_EdgeNeXt_xx_small.ipynb
demos/classification/EfficientFormer/: README.md  README_cn.md  main.py  test_EfficientFormer_l1.ipynb  test_EfficientFormer_l3.ipynb
demos/classification/EfficientFormerV2/: README.md  README_cn.md  test_EfficientFormerv2_s0.ipynb  test_EfficientFormerv2_s1.ipynb  test_EfficientFormerv2_s2.ipynb
demos/classification/EfficientNet/: README.md  README_cn.md  test_EfficientNet_B4.ipynb
demos/classification/EfficientViT_MSRA/: README.md  README_cn.md  test_EfficientViT_MSRA_m5.ipynb
demos/classification/FastViT/: README.md  README_cn.md  test_FastViT_S12.ipynb  test_FastViT_SA12.ipynb  test_FastViT_T12.ipynb  test_FastViT_T8.ipynb
demos/classification/FasterNet/: README.md  README_cn.md  test_FasterNet_S.ipynb  test_FasterNet_T0.ipynb  test_FasterNet_T1.ipynb  test_FasterNet_T2.ipynb
demos/classification/GoogLeNet/: README.md  README_cn.md  main.py  test_GoogLeNet.ipynb
demos/classification/MobileNetV1/: README.md  README_cn.md  test_MobileNetV1.ipynb
demos/classification/MobileNetV2/: README.md  README_cn.md  main.py  test_MobileNetV2.ipynb
demos/classification/MobileNetV3/: README.md  README_cn.md  test_MobileNetV3.ipynb
demos/classification/MobileNetV4/: README.md  README_cn.md  test_MobileNetV4.ipynb  test_MobileNetV4_conv_medium_224x224_nv12.ipynb  test_MobileNetV4_conv_small_224x224_nv12.ipynb
demos/classification/MobileOne/: README.md  README_cn.md  test_MobileOne.ipynb  test_MobileOne_S0.ipynb  test_MobileOne_S1.ipynb  test_MobileOne_S2.ipynb  test_MobileOne_S3.ipynb  test_MobileOne_S4.ipynb
demos/classification/MobilenetV2/: README.md  README_cn.md
demos/classification/RepGhost/: README.md  README_cn.md  test_RepGhost.ipynb  test_RepGhost_111.ipynb  test_RepGhost_150.ipynb  test_RepGhost_200.ipynb
demos/classification/RepVGG/: README.md  README_cn.md  main.py  test_RepVGG.ipynb  test_RepVGG_A0.ipynb  test_RepVGG_A1.ipynb  test_RepVGG_A2.ipynb  test_RepVGG_B0.ipynb  test_RepVGG_B1g2.ipynb  test_RepVGG_B1g4.ipynb
demos/classification/RepViT/: README.md  README_cn.md  main.py  test_RepViT.ipynb  test_RepViT_m0_9.ipynb  test_RepViT_m1_0.ipynb  test_RepViT_m1_1.ipynb
demos/classification/ResNeXt/: README.md  README_cn.md  main.py
demos/classification/ResNet/: README.md  README_cn.md  main.py  test_ResNet18.ipynb
demos/classification/VargConvNet/: main.py  test_VargConvNet.ipynb
demos/detect/: README.md  README_cn.md
demos/detect/FCOS/: FCOS.py  README.md  README_cn.md  jupyter_BSP_FCOS_Detect.ipynb  jupyter_ModelZoo_FCOS_Detect.ipynb
demos/detect/LPRNet/: README.md  README_cn.md  lpr.binn  main.py
demos/detect/PaddleOCR/: README.md  README_cn.md  paddle_ocr.py  test_paddle_ocr.ipynb
demos/detect/YOLO11/: README.md
docs/: Model_Zoo_Repository_Guidelines.md  Python_API_User_Guide.md  README.md  UCP_User_Guide.md  rdk_x5_demo_refactor_status.md
docs/source_reference/: README.md
resource/: test.md
samples/speech/asr/runtime/cpp/: CMakeLists.txt  README.md  run.sh
samples/speech/asr/runtime/cpp/inc/: asr.hpp  audio_chunk_reader.hpp
samples/speech/asr/runtime/cpp/src/: asr.cpp  audio_chunk_reader.cpp  main.cpp
samples/vision/: README.md
samples/vision/paddle_ocr/runtime/cpp/: CMakeLists.txt  README.md  run.sh
samples/vision/paddle_ocr/runtime/cpp/inc/: paddle_ocr.hpp
samples/vision/paddle_ocr/runtime/cpp/src/: main.cpp  paddle_ocr.cpp
samples/vision/ultralytics_yolo/cpp/classify/: CMakeLists.txt  main.cc
samples/vision/yolo11/runtime/cpp/: CMakeLists.txt  README.md  run.sh
samples/vision/yolo11/runtime/cpp/inc/: yolo11.hpp
samples/vision/yolo11/runtime/cpp/src/: main.cpp  yolo11.cpp
samples/vision/yolov5/runtime/cpp/: CMakeLists.txt  README.md  run.sh
samples/vision/yolov5/runtime/cpp/inc/: yolov5.hpp
samples/vision/yolov5/runtime/cpp/src/: main.cc  main.cpp  yolov5.cc  yolov5.cpp
tools/: README.md
utils/c_utils/: README.md
utils/py_utils/: README.md  __init__.py  common_utils.py  draw_utils.py  file_io.py  inspect.py  nn_math.py  postprocess.py  postprocess_utils.py  preprocess.py  preprocess_utils.py  visualize.py
(+905 files in other folders)
